--- a/front/html/confirmation.html
+++ b/front/html/confirmation.html
@@ -19,7 +19,7 @@
     <header>
       <div class="limitedWidthBlockContainer informations">
         <div class="limitedWidthBlock">
-          <!-- Ceci est un commentaire -->
+          <p> ceci est un texte random </p>
           <ul>
             <li><img src="../images/icons/phone.svg" alt="logo de téléphone" class="informations__phone">01 23 45 67 89</li>
             <li><img src="../images/icons/mail.svg" alt="logo d'une enveloppe" class="informations__mail">support@name.com</li>
