--- a/front/html/index.html
+++ b/front/html/index.html
@@ -13,6 +13,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="../js/script.js" defer></script>
   </head>
 
   <body>
@@ -83,6 +84,6 @@
         </div>
       </div>
     </footer>
-  <script src="../js/script.js"></script>
+  
   </body>
 </html>
