--- a/front/html/index.html
+++ b/front/html/index.html
@@ -13,6 +13,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="../js/api.js" defer></script>
     <script src="../js/script.js" defer></script>
   </head>
 
