--- a/front/html/cart.html
+++ b/front/html/cart.html
@@ -77,27 +77,27 @@
               <form method="get" class="cart__order__form">
                 <div class="cart__order__form__question">
                   <label for="firstName">Prénom: </label>
-                  <input type="text" name="firstName" id="firstName" value="jjds12" required>
+                  <input type="text" name="firstName" id="firstName" value="" required>
                   <p id="firstNameErrorMsg"><!-- ci est un message d'erreur --></p>
                 </div>
                 <div class="cart__order__form__question">
                   <label for="lastName">Nom: </label>
-                  <input type="text" name="lastName" id="lastName" value="jjds12" required>
+                  <input type="text" name="lastName" id="lastName" value="" required>
                   <p id="lastNameErrorMsg"></p>
                 </div>
                 <div class="cart__order__form__question">
                   <label for="address">Adresse: </label>
-                  <input type="text" name="address" id="address" value="jjds12" required>
+                  <input type="text" name="address" id="address" value="" required>
                   <p id="addressErrorMsg"></p>
                 </div>
                 <div class="cart__order__form__question">
                   <label for="city">Ville: </label>
-                  <input type="text" name="city" id="city" value="jjds12" required>
+                  <input type="text" name="city" id="city" value="" required>
                   <p id="cityErrorMsg"></p>
                 </div>
                 <div class="cart__order__form__question">
                   <label for="email">Email: </label>
-                  <input type="email" name="email" id="email" value="jjds12@kjsjsf.uj" required>
+                  <input type="email" name="email" id="email" value="" required>
                   <p id="emailErrorMsg"></p>
                 </div>
                 <div class="cart__order__form__submit">
